# tentos

./: .dockerignore  .gitignore  AGENTS.md  README.md  justfile  package-lock.json  package.json  playwright.config.ts  pyproject.toml  tsconfig.playwright.json
.github/workflows/: ci.yml
apps/backend/: pyproject.toml
apps/backend/src/grow_backend/: __init__.py  config.py  main.py  models.py
apps/backend/src/grow_backend/api/: routes.py
apps/backend/src/grow_backend/automation/: __init__.py  service.py
apps/backend/src/grow_backend/camera/: __init__.py  service.py
apps/backend/src/grow_backend/devices/: __init__.py  service.py
apps/backend/src/grow_backend/mqtt/: __init__.py  topics.py
apps/backend/src/grow_backend/storage/: __init__.py  repository.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
deploy/pi-camera/: README.md  camera.env.example
deploy/systemd/: grow-pi-camera.service
docs/: code-review-issues.md
docs/plans/: cleanup-batch-2026-04-03.md  current-state-assessment-2026-03-23.md  implementation-roadmap.md  optimization-plan.md
firmware/esp32-controller/: platformio.ini
models/carbon-filter/: Butt Cap.stl  Fan Vent Cap.stl
nodes/pi-camera/: pyproject.toml
nodes/pi-camera/src/grow_camera/: __init__.py  capture.py  config.py  main.py
scripts/dev/: bootstrap.sh  flash_firmware.sh
scripts/sim/: dump_camera_fixture.py  dump_controller_fixture.py  fake_camera.py  fake_controller.py
shared/contracts/: README.md  alert.schema.json  alerts.response.schema.json  camera-state.schema.json  cameras.response.schema.json  device-command.schema.json  device-telemetry.schema.json  devices.response.schema.json  protocol.yaml  (+3 more)
(+68 files in other folders)
