[build-system]
requires = ["setuptools>=82", "wheel>=0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "grow-camera-node"
version = "0.1.0"
description = "Pi camera node for the grow project."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.135,<0.136",
  "pydantic>=2.12,<3",
  "uvicorn[standard]>=0.40,<0.41"
]

[project.scripts]
grow-pi-camera = "grow_camera.main:run"

[tool.setuptools.packages.find]
where = ["src"]
